# youtube_yapper_trapper

./: .env_example  .gitignore  Comment_2024-05-14_16-29.md  README.md  Report_2024-05-14_16-53.md  myFork.code-workspace  notes How to setup with poetry.md  notes.md  pyproject.toml  scrapNotesmd.md
src/youtube_yapper_trapper/: crew.py  main.py
src/youtube_yapper_trapper/config/: agents.yaml  tasks.yaml
src/youtube_yapper_trapper/tools/: custom_tool.py
