[tool.poetry]
name = "youtube_yapper_trapper"
version = "0.1.0"
description = "youtube-yapper-trapper using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.30.8"}
langchain-groq = "^0.1.3"
agentops = "^0.1.9"
 
[tool.poetry.scripts]
youtube_yapper_trapper = "youtube_yapper_trapper.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"